@@ -5,7 +5,7 @@ use Config;
 &check_kit;
 
 my $libdir; my $bindir; my $man1dir; my $man3dir; my $comment; my $perlbin;
-my $version = '1.42';
+my $version = '1.43';
 ($libdir, $bindir, $man1dir, $man3dir) = &defaults();
 
 if (! -t STDIN) {  # not interactive, use defaults ...
@@ -105,7 +105,7 @@ sub localise { my $file = $_[$[];
 	while (<F>) {
 		if ($comment) { s/#COMMENT#/$comment/; }
 		s/#PERLBIN#/$perlbin/;
-		s/#!perl/$perlbin/;
+		s/#!perl/#!$perlbin/;
 		s/#LIBDIR#/$libdir/;
 		if ($bindir)  { s/#BINDIR#/$bindir/; }
 		if ($version) { s/#VERSION#/$version/; }
@@ -256,13 +256,13 @@ sub check_kit {
 	print STDERR "Checking your kit ... ";
 
 	my %file_sizes = (
-		'README', 1669,
-		'Changes', 536,
+		'README', 1716,
+		'Changes', 611,
 		'MANIFEST', 90,
-		'Tea.pm', 25658,
+		'Tea.pm', 25706,
 		'bin/tea', 3003,
-		'Clui', 29488,
-		'test.pl', 3353,
+		'Clui', 31223,
+		'test.pl', 9604,
 	);
 
 	my $problem_found = 0;
